Fix: white space on 'conditions' pages, container added. Feat: Add footer.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -222,3 +222,6 @@
   min-height: 200px;
 }
 
+.footer-logo {
+  height: 100px
+}
